<resources>
    <string name="app_name">Calculator</string>
    <string name="equals">=</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="times">x</string>
    <string name="ac">AC</string>
    <string name="pos_neg">+/-</string>
    <string name="percent">%</string>
    <string name="devide">/</string>
    <string name="nol">0</string>
    <string name="clear_all">Clear all</string>
    <string name="clear_all_activities">Clear all activities</string>
    <string name="go">GO</string>
    <string name="policy">Policy</string>
    <string-array name="Policy">
        <item>Policy</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
    </string-array>
    <string-array name="Category">
        <item>Category</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
    </string-array>
    <string-array name="Counrty">
        <item>Counrty</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
    </string-array>
    <string-array name="Brand">
        <item>Brand</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
    </string-array>
</resources>