<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dimen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/container">
        <TextView
            android:layout_gravity="bottom|end"
            android:id="@+id/text_input"
            android:layout_marginHorizontal="@dimen/thirtysix"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nol"
            android:textColor="@color/white"
            android:textSize="@dimen/big_textsize"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:paddingHorizontal="@dimen/default_margin"
            android:paddingVertical="@dimen/little_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                style="@style/Grey.Button"
                android:id="@+id/btn_ac"
                android:onClick="onNumberClick"
                android:text="@string/ac" />

            <com.google.android.material.button.MaterialButton
                style="@style/Grey.Button"
                android:id="@+id/btn_pos_neg"
                android:onClick="onOperationClick"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:text="@string/pos_neg" />

            <com.google.android.material.button.MaterialButton
                style="@style/Grey.Button"
                android:id="@+id/btn_percent"
                android:onClick="onOperationClick"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/percent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_devide"
                android:onClick="onOperationClick"
                android:text="@string/devide" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:paddingHorizontal="@dimen/default_margin"
            android:paddingVertical="@dimen/little_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                style="@style/DarkGrey.Button"
                android:id="@+id/btn_seven"
                android:onClick="onNumberClick"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGrey.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_eight"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGrey.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_nine"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_times"
                android:onClick="onOperationClick"
                android:text="@string/times" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:paddingHorizontal="@dimen/default_margin"
            android:paddingVertical="@dimen/little_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                style="@style/DarkGrey.Button"
                android:id="@+id/btn_four"
                android:onClick="onNumberClick"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGrey.Button"
                android:id="@+id/btn_five"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGrey.Button"
                android:id="@+id/btn_six"
                android:onClick="onNumberClick"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_minus"
                android:onClick="onOperationClick"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:paddingHorizontal="@dimen/default_margin"
            android:paddingVertical="@dimen/little_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                style="@style/DarkGrey.Button"
                android:id="@+id/btn_one"
                android:onClick="onNumberClick"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGrey.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_two"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGrey.Button"
                android:id="@+id/btn_three"
                android:onClick="onNumberClick"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:id="@+id/btn_plus"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:paddingHorizontal="@dimen/default_margin"
            android:paddingVertical="@dimen/little_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                style="@style/DarkGrey.Button"
                android:layout_width="@dimen/big_button_width"
                android:id="@+id/btn_zero"
                android:onClick="onNumberClick"
                android:textAlignment="textStart"
                android:paddingStart="@dimen/thirtytwo"
                android:paddingEnd="@dimen/zero_dimen"
                android:text="@string/zero" />

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGrey.Button"
                android:id="@+id/btn_point"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:text="@string/point" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_equals"
                android:onClick="onOperationClick"
                android:text="@string/equals" />
        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>