<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey"
    tools:context=".Second_activity">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/grey_super_dark"
        android:layout_height="@dimen/little_layout">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/little_button"
            android:layout_height="@dimen/little_button"
            android:src="@drawable/ic_logo"
            android:layout_marginVertical="@dimen/twenty"
            android:layout_marginHorizontal="@dimen/logo_margin"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_menu_bar"
            app:iconSize="@dimen/icon_size"
            android:layout_width="@dimen/little_button"
            android:layout_height="@dimen/little_button"
            android:layout_marginStart="@dimen/twenty"
            android:layout_marginTop="@dimen/twenty"
            android:layout_marginBottom="@dimen/twenty"
            android:backgroundTint="@color/grey_super_dark"
            android:padding="@dimen/little_padding"
            app:icon="@drawable/ic_menu_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_search"
            app:iconSize="@dimen/icon_size"
            android:layout_width="@dimen/little_button"
            android:layout_height="@dimen/little_button"
            android:layout_marginStart="@dimen/m"
            android:layout_marginTop="@dimen/twenty"
            android:layout_marginBottom="@dimen/twenty"
            android:backgroundTint="@color/grey_super_dark"
            android:padding="@dimen/little_padding"
            app:icon="@drawable/ic_search" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/red_btn"
        android:layout_width="@dimen/red_btn_wid"
        android:layout_height="@dimen/red_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/clear_all"
        android:textSize="@dimen/red_btn_textsize"
        app:layout_constraintTop_toTopOf="@id/top_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/red_btn_margin"
        app:cornerRadius="@dimen/button_radius"
        android:backgroundTint="@color/red"/>

    <TextView
        android:id="@+id/text_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/red_btn"
        android:text="@string/clear_all_activities"
        android:textColor="@color/grey_super_dark"
        android:textSize="@dimen/middle_textsize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"/>

    <Spinner
        android:layout_width="@dimen/spinner_wid"
        android:layout_height="@dimen/spinner_height"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/mar_bot"
        app:layout_constraintBottom_toTopOf="@id/text_clear"
        android:id="@+id/spinner1"
        android:entries="@array/Brand"/>

    <Spinner
        android:layout_width="@dimen/spinner_wid"
        android:layout_height="@dimen/spinner_height"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/mar_bot"
        app:layout_constraintBottom_toTopOf="@id/spinner1"
        android:id="@+id/spinner2"
        android:entries="@array/Counrty" />

    <Spinner
        android:layout_width="@dimen/spinner_wid"
        android:layout_height="@dimen/spinner_height"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/mar_bot"
        app:layout_constraintBottom_toTopOf="@id/spinner2"
        android:id="@+id/spinner3"
        android:entries="@array/Category"/>

    <Spinner
        android:layout_width="@dimen/spinner_wid"
        android:layout_height="@dimen/spinner_height"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/mar_bot"
        app:layout_constraintBottom_toTopOf="@id/spinner3"
        android:id="@+id/spinner4"
        android:entries="@array/Policy"/>

    <TextView
        android:id="@+id/text_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/spinner4"
        android:text="@string/policy"
        android:layout_marginBottom="@dimen/mar"
        android:textColor="@color/grey_super_dark"
        android:textSize="@dimen/middle_textsize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>